--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <body>
 
     <h1> JavaScripts essentials  </h1>
-    <script src="index.js"></script>
+    <!-- <script src="index.js"></script> -->
+    <script src="./destructurig_array_object/js_02.js"></script>
 </body>
 
 </html>
