--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <h1> JavaScripts essentials  </h1>
     <!-- <script src="index.js"></script> -->
-    <script src="./destructurig_array_object/js_02.js"></script>
+    <script src="./spread_oper/js_03.js"></script>
 </body>
 
 </html>
