--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
     <h1> JavaScripts essentials  </h1>
     <!-- <script src="index.js"></script> -->
-    <script src="./spread_oper/js_03.js"></script>
+    <!-- <script src="./spread_oper/js_03.js"></script> -->
+    <script src="./let_const_decla/js_04.js"></script>
 </body>
 
 </html>
