--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <!-- <script src="index.js"></script> -->
     <!-- <script src="./spread_oper/js_03.js"></script> -->
     <!-- <script src="./let_const_decla/js_04.js"></script> -->
-    <script src="./function/js_05.js"></script>
+    <!-- <script src="./function/js_05.js"></script> -->
+    <!-- <script src="./Array/js_07.js"></script> -->
+    <script src="./async_Api/js_08.js"></script>
 </body>
 
 </html>
